include/nvtx3/nvToolsExtPayload.h


#define NVTX_SCOPE_NONE 0 
#define NVTX_SCOPE_ROOT 1 
#define NVTX_SCOPE_CURRENT_VM 17
#define NVTX_TIME_DOMAIN_ID_NONE 0
typedef struct nvtxPayloadData_v1
{
    uint64_t schemaId;
    size_t size;
    const void* payload;
} nvtxPayloadData_t;
typedef struct nvtxPayloadSchemaEntry_v1
{
    uint64_t flags;
    uint64_t type;
    const char* name;
    const char* description;
    uint64_t arrayOrUnionDetail;
    uint64_t offset;
    const nvtxSemanticsHeader_t* semantics;
    const void* reserved;
} nvtxPayloadSchemaEntry_t;
typedef struct nvtxPayloadSchemaAttr_v1
{
    uint64_t fieldMask;
    const char* name;
    uint64_t type;
    uint64_t flags;
    const nvtxPayloadSchemaEntry_t* entries;
    size_t numEntries;
    size_t payloadStaticSize;
    size_t packAlign;
    uint64_t schemaId;
    void* extension;
} nvtxPayloadSchemaAttr_t;
typedef struct nvtxPayloadEnum_v1
{
    const char* name;
    uint64_t value;
    int8_t isFlag;
} nvtxPayloadEnum_t;
typedef struct nvtxPayloadEnumAttr_v1
{
    uint64_t fieldMask;
    const char* name;
    const nvtxPayloadEnum_t* entries;
    size_t numEntries;
    size_t sizeOfEnum;
    uint64_t schemaId;
    void* extension;
} nvtxPayloadEnumAttr_t;
typedef struct nvtxScopeAttr_v1
{
    size_t structSize;
    const char* path;
    uint64_t parentScope;
    uint64_t scopeId;
} nvtxScopeAttr_t;
typedef struct nvtxTimeDomainAttr_v1
{
    uint64_t scopeId;
    uint64_t timestampTypeId;
    uint64_t timeDomainId;
    uint64_t timerFlags;
    int64_t timerResolution;
    uint64_t timerStart;
} nvtxTimeDomainAttr_t;
typedef struct nvtxSyncPoint_v1
{
    int64_t src;
    int64_t dst;
} nvtxSyncPoint_t;
typedef struct nvtxEventBatch_v1
{
    uint64_t eventSchemaId;
    size_t size;
    const void* events;
    uint64_t scope;
    uint64_t flags;
    const void* flexData;
    size_t flexDataSize;
    size_t flexDataOffset;
} nvtxEventBatch_t;
NVTX_DECLSPEC void NVTX_API nvtxTimerSource(
    nvtxDomainHandle_t domain,
    uint64_t timeDomainId,
    uint64_t flags,
    int64_t (*timestampProviderFn)(void));
NVTX_DECLSPEC void NVTX_API nvtxTimerSourceWithData(
    nvtxDomainHandle_t domain,
    uint64_t timeDomainId,
    uint64_t flags,
    int64_t (*timestampProviderFn)(void* data),
    void* data);