c/include/nvtxw3/nvtxw3.h

typedef int32_t nvtxwResultCode_t;
#define NVTXW_RESULT_SUCCESS                          0
#define NVTXW_RESULT_FAILED                           1
#define NVTXW_RESULT_INVALID_ARGUMENT                 2
#define NVTXW_RESULT_LIBRARY_NOT_FOUND                3
#define NVTXW_RESULT_LIBRARY_LOAD_FAILED              4
#define NVTXW_RESULT_LIBRARY_SYMBOL_MISSING           5
#define NVTXW_RESULT_INTERFACE_VERSION_NOT_SUPPORTED  6
#define NVTXW_RESULT_NOT_SUPPORTED                    7
#define NVTXW_INTERFACE_VERSION  2
#define NVTXW_GET_INTERFACE_SYMBOL_NAME "nvtxwGetInterface"
#define NVTXW_FINALIZE_SYMBOL_NAME "nvtxwFinalize"
typedef int32_t nvtxwInterfaceVersion_t;
typedef nvtxwResultCode_t (*nvtxwGetInterface_t)(
    nvtxwInterfaceVersion_t version,
    const void** ifaceOut);
typedef struct nvtxwSession_st* nvtxwSessionHandle_t;
typedef struct nvtxwStream_st* nvtxwStreamHandle_t;
typedef struct nvtxwSessionAttributes_v1
{
    size_t structSize;
    const char* name;
    const char* configString;
} nvtxwSessionAttributes_t;
typedef struct nvtxwDomainAttributes_v1
{
    size_t structSize;
    const char* name;
} nvtxwDomainAttributes_t;
#define NVTXW_STREAM_ORDER_INTERLEAVING_NONE          NVTX_STATIC_CAST(int16_t, 0)
#define NVTXW_STREAM_ORDER_INTERLEAVING_SCOPE         NVTX_STATIC_CAST(int16_t, 1)
#define NVTXW_STREAM_ORDERING_TYPE_UNKNOWN            NVTX_STATIC_CAST(int16_t, 0)
#define NVTXW_STREAM_ORDERING_TYPE_STRICT             NVTX_STATIC_CAST(int16_t, 1)
#define NVTXW_STREAM_ORDERING_TYPE_PACKED_RANGE_START NVTX_STATIC_CAST(int16_t, 2)
#define NVTXW_STREAM_ORDERING_TYPE_PACKED_RANGE_END   NVTX_STATIC_CAST(int16_t, 3)
#define NVTXW_STREAM_ORDERING_SKID_NONE          NVTX_STATIC_CAST(int32_t, 0)
#define NVTXW_STREAM_ORDERING_SKID_TIME_NS       NVTX_STATIC_CAST(int32_t, 1)
#define NVTXW_STREAM_ORDERING_SKID_EVENT_COUNT   NVTX_STATIC_CAST(int32_t, 2)
typedef struct nvtxwStreamAttributes_v1
{
    size_t structSize;
    const char* name;
    nvtxDomainHandle_t domain;
    uint64_t scopeId;
    uint64_t timeDomainId;
    int16_t orderInterleaving;  
    int16_t orderingType;       
    int32_t orderingSkid;       
    int64_t orderingSkidAmount; 
} nvtxwStreamAttributes_t;
typedef struct nvtxwInterface_v2
{
    nvtxwResultCode_t (*SessionBegin)(
        const nvtxwSessionAttributes_t* attr,
        nvtxwSessionHandle_t* sessionOut);
    nvtxwResultCode_t (*SessionEnd)(
        nvtxwSessionHandle_t session);
    nvtxwResultCode_t (*DomainRegister)(
        nvtxwSessionHandle_t session,
        const nvtxwDomainAttributes_t* attr,
        nvtxDomainHandle_t* domainOut);
    nvtxwResultCode_t (*CategoryRegister)(
        nvtxDomainHandle_t domain,
        uint32_t category,
        const char* name);
    nvtxwResultCode_t (*StringRegister)(
        nvtxDomainHandle_t domain,
        const char* string,
        nvtxStringHandle_t* stringHandleOut);
    nvtxwResultCode_t (*ResourceRegister)(
        nvtxDomainHandle_t domain,
        const nvtxResourceAttributes_t* attr);
    nvtxwResultCode_t (*ScopeRegister)(
        nvtxDomainHandle_t domain,
        const nvtxScopeAttr_t* attr,
        uint64_t* scopeIdOut);
    nvtxwResultCode_t (*SchemaRegister)(
        nvtxDomainHandle_t domain,
        const nvtxPayloadSchemaAttr_t* attr,
        uint64_t* schemaIdOut);
    nvtxwResultCode_t (*EnumRegister)(
        nvtxDomainHandle_t domain,
        const nvtxPayloadEnumAttr_t* attr,
        uint64_t* enumIdOut);
    nvtxwResultCode_t (*CounterRegister)(
        nvtxDomainHandle_t domain,
        const nvtxCounterAttr_t* attr,
        uint64_t* counterIdOut);
    nvtxwResultCode_t (*TimeDomainRegister)(
        nvtxDomainHandle_t domain,
        const nvtxTimeDomainAttr_t* attr,
        uint64_t* timeDomainIdOut);
    nvtxwResultCode_t (*StreamOpen)(
        nvtxwSessionHandle_t session,
        const nvtxwStreamAttributes_t* attr,
        nvtxwStreamHandle_t* streamOut);
    nvtxwResultCode_t (*StreamClose)(
        nvtxwStreamHandle_t stream);
    nvtxwResultCode_t (*EventWrite)(
        nvtxwStreamHandle_t stream,
        const nvtxPayloadData_t* payloads,
        size_t payloadCount);
    nvtxwResultCode_t (*EventBatchWrite)(
        nvtxwStreamHandle_t stream,
        const nvtxEventBatch_t* eventBatch);
    nvtxwResultCode_t (*CounterWrite)(
        nvtxwStreamHandle_t stream,
        int64_t timestamp,
        uint64_t counterId,
        const void* data,
        size_t size);
    nvtxwResultCode_t (*CounterNoValueWrite)(
        nvtxwStreamHandle_t stream,
        int64_t timestamp,
        uint64_t counterId,
        uint8_t reason);
    nvtxwResultCode_t (*CounterBatchWrite)(
        nvtxwStreamHandle_t stream,
        const nvtxCounterBatch_t* counterBatch);
    nvtxwResultCode_t (*TimeSyncPointWrite)(
        nvtxwStreamHandle_t stream,
        uint64_t timeDomainId1,
        uint64_t timeDomainId2,
        int64_t timestamp1,
        int64_t timestamp2);
    nvtxwResultCode_t (*TimeSyncPointTableWrite)(
        nvtxwStreamHandle_t stream,
        uint64_t timeDomainIdSrc,
        uint64_t timeDomainIdDst,
        const nvtxSyncPoint_t* syncPoints,
        size_t count);
    nvtxwResultCode_t (*TimestampConversionFactorWrite)(
        nvtxwStreamHandle_t stream,
        uint64_t timeDomainIdSrc,
        uint64_t timeDomainIdDst,
        double slope,
        int64_t timestampSrc,
        int64_t timestampDst);
    void (*reserved[43])(void);
} nvtxwInterface_v2_t;